k3s/authentik/manifests/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-ingressroute
  namespace: authentik
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.bzn.bauer.mt`)
      kind: Rule
      services:
        - name: authentik-server
          port: 443
  tls:
    secretName: authentik-bzn-bauer-mt
